# my-valuecell

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.ja.md  README.md  README.zh.md  README.zh_Hant.md  WATCHLIST_API_README.md  deploy-server.sh  deploy-valuecell.sh  frontend.code-workspace  login.exp  project.code-workspace  start.ps1  start.sh
python/: .env.example  README.md  pyproject.toml
python/configs/: ENV_VARIABLES.md  config.yaml
python/configs/agent_cards/: aswath_damodaran_agent.json  auto_trading_agent.json  ben_graham_agent.json  bill_ackman_agent.json  cathie_wood_agent.json  charlie_munger_agent.json  fundamentals_analyst_agent.json  hedge_fund_agent.json  investment_research_agent.json  michael_burry_agent.json  mohnish_pabrai_agent.json  peter_lynch_agent.json  phil_fisher_agent.json  rakesh_jhunjhunwala_agent.json  sec_agent.json  sentiment_analyst_agent.json  stanley_druckenmiller_agent.json  technical_analyst_agent.json  trading_agents.json  valuation_analyst_agent.json  warren_buffett_agent.json
python/configs/agents/: auto_trading_agent.yaml  research_agent.yaml  super_agent.yaml
python/configs/locales/: en-US.json  language_list.json  zh-Hant.json
python/configs/providers/: google.yaml  openrouter.yaml  siliconflow.yaml
python/locales/: en-GB.json  en-US.json  zh-Hans.json  zh-Hant.json
python/scripts/: init_database.py  launch.py  prepare_envs.ps1  prepare_envs.sh
python/valuecell/: __init__.py  i18n.py
python/valuecell/adapters/assets/: README.md  __init__.py  akshare_adapter.py  base.py  coinmarketcap_adapter.py  finnhub_adapter.py  i18n_integration.py  manager.py  tushare_adapter.py  types.py  yfinance_adapter.py
python/valuecell/adapters/models/: __init__.py  factory.py
python/valuecell/agents/: __init__.py  hello_world.py  sec_13F_agent.py  sec_agent.py  sec_client.py
python/valuecell/agents/auto_trading_agent/: __init__.py  __main__.py  agent.py  constants.py  formatters.py  market_data.py  models.py  portfolio_decision_manager.py  position_manager.py  technical_analysis.py  trade_recorder.py  trading_executor.py
python/valuecell/agents/research_agent/: __main__.py  core.py  knowledge.py  prompts.py  schemas.py  sources.py  vdb.py
python/valuecell/agents/tests/: test_import.py
python/valuecell/agents/utils/: context.py
python/valuecell/api/: app.py  i18n_api.py  schemas.py
python/valuecell/api/router/: i18n.py
python/valuecell/config/: constants.py  i18n.py  loader.py  manager.py  settings.py
python/valuecell/core/: __init__.py  constants.py  types.py
python/valuecell/core/agent/: README.md  __init__.py  (+8 more)
python/valuecell/examples/: __init__.py  agent_i18n_example.py  ai_hedge_fund_websocket_example.html  ai_hedge_fund_websocket_example.py  asset_adapter_example.py  core_e2e_demo.py  core_remote_agent_demo.py  i18n_example.py  trading_agents_demo.py
python/valuecell/server/: main.py
python/valuecell/services/: agent_context.py  i18n_service.py
python/valuecell/utils/: __init__.py  db.py  env.py  i18n_utils.py  model.py  path.py  port.py  user_profile_utils.py  uuid.py
(+264 files in other folders)
